<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="sPositionArrays" Id="{ef6835fb-0b4d-4ab4-9e0f-2711417d7a26}">
    <Declaration><![CDATA[TYPE sPositionArrays :
STRUCT
	q1		: ARRAY[0..7] OF BYTE;
	q2		: ARRAY[0..7] OF BYTE;
	q3		: ARRAY[0..7] OF BYTE;
	q4		: ARRAY[0..7] OF BYTE;
	q5		: ARRAY[0..7] OF BYTE;
	q6		: ARRAY[0..7] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>