<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="Array8_LReal" Id="{a242b221-9eac-4b96-9a07-24d05cc8ad50}">
    <Declaration><![CDATA[TYPE Array8_LReal :
UNION
	arrByte			:ARRAY[0..7] OF BYTE;
	rValue			:LREAL;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>