<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="String_Array256" Id="{77a242ca-3986-43cd-b1ea-1aa5dfafa5fe}">
    <Declaration><![CDATA[TYPE String_Array256 :
UNION
	sValue			:STRING; 
	arrByte 		:ARRAY[0..255] OF BYTE;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>